get search tests working

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-  <header>
-    <a href="/"><h1>Noteful</h1></a>
+  <header role="header">
+    <h1>Noteful</h1>
   
   </header>
   <main>
